// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > Snapshots > matches default snapshot 1`] = `
<input
  class="input"
  data-testid="input"
/>
`;

exports[`Input > Snapshots > matches disabled state snapshot 1`] = `
<input
  class="input"
  data-testid="input"
  disabled=""
/>
`;

exports[`Input > Snapshots > matches error state snapshot 1`] = `
<div
  class="input-wrapper"
>
  <input
    class="input input--error"
    data-testid="input"
  />
  <p
    class="input-error"
  />
</div>
`;

exports[`Input > Snapshots > matches loading state snapshot 1`] = `
<input
  class="input input--loading"
  data-testid="input"
  disabled=""
/>
`;
